# airanalyser

./: .gitignore  README.md  air_quality_20241128_003921.csv  air_quality_20241128_011007.csv  air_quality_20241128_013011.csv  air_quality_20241128_094547.csv  air_quality_20241128_094617.csv  air_quality_20241128_135915.csv  air_quality_20241128_222911.csv  analyse.py  display.py  evaluate.py  hello.py  monitor.py  pm.py  pyproject.toml  test_display.py
dev_utils/: mock_display.py  mock_gpiod.py  mock_sensors.py
display/: demo_opts.py  game_of_life.py  kanji.py
