[project]
name = "piairqual"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "fire>=0.7.0",
    "ipython>=8.29.0",
    "matplotlib>=3.9.2",
    "seaborn>=0.13.2",
]

[dependency-groups]
hardware = [
    "luma-oled",
    "pimoroni-sgp30>=0.0.2",
    "pms5003>=1.0.1",
    "scd4x>=0.0.2",
    "sensirion-i2c-scd",
]
dev = [
    "pyright>=1.1.389",
    "pytest>=6.2.5",
    "ruff>=0.8.1",
    "sensirion-i2c-scd[test]",
]

[tool.uv.sources]
sensirion-i2c-scd = { git = "https://github.com/Sensirion/python-i2c-scd.git" }
luma-oled = { git = "https://github.com/rm-hull/luma.oled.git" }
